@@ -3,12 +3,13 @@ serd (0.23.0) unstable;
   * Add serd_node_new_relative_uri()
   * Fix construction and comparison of URIs with UTF-8 characters
   * Report I/O errors with message and return appropriate status code
+  * Report missing statement separator errors
   * Fix potential out of bounds read
   * Fix unaligned memory access, undefined behaviour which breaks on ARM
   * Fix documentation generation
   * Update serdi man page
 
- -- David Robillard <d@drobilla.net>  Sun, 10 Jul 2016 18:55:37 -0400
+ -- David Robillard <d@drobilla.net>  Tue, 09 Aug 2016 16:54:23 -0400
 
 serd (0.22.0) stable;
 
